ported to vscode